0.97.1.2:
  - Fix database.yml not being converted to the correct loading setting.
0.97.1.3:
  - Placeholder change: %townyadvanced_player_location_pvp% now shows (No PVP) where PVP is disabled.
  - New Placeholder: %townyadvanced_player_location_town_resident_count%
    - If there is a town present where the player stands, it will return the number representing the number of residents that town has.
  - New Placeholder: %townyadvanced_player_location_town_mayor_name%
    - If there is a town present where the player stands, it will return the name of that town's mayor.
  - New Placeholder: %townyadvanced_player_location_town_nation_name%
    - If there is a town present where the player stands, it will return the name of the nation, if the town has one.
  - Language file bumped to 0.118
  - Fix DailyTimerTasks not checking if some lists are empty.
  - Solve potential NPE when residents' jail cells are loaded.
  - Replace deprecated mysql driver.  
  - Fix sending correct helpmessage to ops/admins who log in while safemode is active.
  - Actually fix database.yml not being converted to correctly for servers using mysql. 
0.97.1.4:
  - Bump language file to 0.119.
  - Fix mayors being able to jail their residents in order to get around /t spawn restrictions for enemies and outlaws.
    - Closes #5216.
  - Automatic config update: global_town_settings.prevent_town_spawn_in will have ",outlaw" added to it.
    - Outlaws will be kept from using (and paying for) /t spawn and /n spawn much earlier than before.
  - Fix fishing being able to be bucketed.
    - Closes #5213.
  - Fix /t outlaw add command kicking the command sender from their town.
  - Fix entities not being able to be added to the EventWar explosions_ignore_list.
    - Closes #4791.
  - Fix map hud being off by one townblock in some instances.
  - Fix jailed residents not saving their object immediately.
  - Fix saving of jailed residents in mysql. 